debug: fix recycleview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/messLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chatclient.screens.MainActivity">
+    tools:context="com.example.chatclient.screens.main.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
