--- a/app/src/main/res/layout/item_incoming_message.xml
+++ b/app/src/main/res/layout/item_incoming_message.xml
@@ -49,7 +49,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/txtTextMessage"
+                android:id="@+id/txtMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
