--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/itemUserList"
+        android:title="Show active users" />
+    <item
         android:id="@+id/itemLogout"
         android:title="Log out" />
 </menu>
