--- a/app/src/main/res/layout/dialog_userlist.xml
+++ b/app/src/main/res/layout/dialog_userlist.xml
@@ -12,6 +12,5 @@
         android:layout_marginRight="32dp"
         android:isScrollContainer="true"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="18sp" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 </ScrollView>
