--- a/app/src/main/res/layout/item_incoming_message.xml
+++ b/app/src/main/res/layout/item_incoming_message.xml
@@ -8,45 +8,31 @@
     android:paddingTop="5dp">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/chat_bubble_left"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <TextView
-            android:id="@+id/txtTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="7dp"
-            android:paddingBottom="5dp"
-            android:paddingRight="10dp"
-            android:text="17:10" />
+        android:background="@drawable/chat_bubble_left"
+        android:elevation="2dp">
 
         <LinearLayout
             android:id="@+id/chat_company_reply_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:orientation="vertical"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/txtTime"
-            android:layout_marginStart="29dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:paddingLeft="20dp"
-                android:paddingRight="8dp"
-                android:paddingTop="5dp"
+                android:layout_gravity="left"
+                android:layout_marginBottom="0dp"
+                android:paddingLeft="5dp"
                 android:text="User1"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
                 android:id="@+id/txtMessage"
@@ -55,13 +41,28 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="right"
 
+                android:layout_marginBottom="8dp"
                 android:autoLink="web"
-                android:maxWidth="280dp"
-                android:paddingLeft="20dp"
-                android:text="Rahul Agrawal is a good boy but he does not know what he wants." />
+                android:maxWidth="300dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="Rahul Agrawal is a good boy but he does not know what he wants."
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/txtTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="17:10"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/relativeLayout"
+        android:layout_marginStart="6dp" />
 
 </RelativeLayout>
