--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -3,9 +3,15 @@
 
     <item android:state_pressed="true" android:state_focused="true">
         <shape>
+            <gradient
+                android:startColor="#F6EBC9"
+                android:centerColor="#F6EBC9"
+                android:endColor="#F6EBC9"
+                android:angle="270"
+                />
             <stroke
                 android:width="2.3dp"
-                android:color="#F6EBC9" />
+                android:color="@color/colorAccent" />
             <corners
                 android:radius="10dp" />
         </shape>
@@ -15,7 +21,7 @@
         <shape>
             <stroke
                 android:width="2.3dp"
-                android:color="#F6EBC9" />
+                android:color="@color/colorAccent" />
             <corners
                 android:radius="10dp" />
         </shape>
@@ -23,6 +29,12 @@
 
     <item android:state_pressed="false" android:state_focused="true">
         <shape>
+            <gradient
+                android:startColor="#F6EBC9"
+                android:centerColor="#F6EBC9"
+                android:endColor="#F6EBC9"
+                android:angle="270"
+                />
             <stroke
                 android:width="0.7dp"
                 android:color="#000000" />
